src/share/org/dianexus/triceps/Qss.java
/* Generated By:JavaCC: Do not edit this line. Qss.java */
import java.io.*;
import java.util.*;

public class Qss implements QssConstants {
    private static final String DEFAULT_EOL = "\n\r";

    private Stack stack;
    private Evidence evidence;
    private Writer debugWriter = null;
    private Writer errorWriter = null;
    private String debugEol = DEFAULT_EOL;
    private String errorEol = DEFAULT_EOL;
    private int errorCount = 0;
    private boolean isDebug = false;

        public Datum parse(Evidence ev) {
                evidence = ev;
        Datum d = Datum.INVALID_DATUM;

                try {
                        stack = new Stack();
                        Statement();
                        d = (Datum) stack.pop();
                }
                catch (EmptyStackException e) {
                        error("stack underflow",token.beginLine,token.beginColumn);
                }
                catch (ParseException e) {
                        error(e.getMessage());
                }
                catch (TokenMgrError e) {
                        error(e.getMessage());
                }

                if (isDebug) {
                        debug(null,d);
                }

                return d;
        }

        public boolean setDebugWriter(Writer w) { return setDebugWriter(w,null); }
        public boolean setDebugWriter(Writer w, String eol) {
                debugWriter = w;
                debugEol = ((eol == null) ? DEFAULT_EOL : eol);
                isDebug = (w != null);
                return isDebug;
        }

        public boolean setErrorWriter(Writer w) { return setErrorWriter(w,null); }
        public boolean setErrorWriter(Writer w, String eol) {
                errorWriter = w;
                errorEol = ((eol == null) ? DEFAULT_EOL : eol);
                return (w != null);
        }


        private void error(String s) { error(s,0,0); }

        private void error(String s, int line, int column) {
                if (errorWriter != null) {
                        try {
                                errorWriter.write("ERR " + (++errorCount) + ") " + s +
                                        ((line != 0) ? (" at line " + line + ", column " + column) : "") + errorEol);
                                errorWriter.flush();
                        }
                        catch (IOException e) {
                                System.err.println(e.getMessage());
                        }
                }
        }

        /* Prints stack trace in tab delimited format - operator, arguments, ->, answer */
        private void debug(String s,Datum d) {
                if (debugWriter != null) {
                        try {
                                debugWriter.write(((s != null) ? (s + "\t") : "") + "->\t" +
                                        d.stringVal(true) + "\t" + d.doubleVal() + "\t" + d.dateVal() + "\t" + d.monthVal() + debugEol);
                                debugWriter.flush();
                        }
                        catch (IOException e) {
                                System.err.println(e.getMessage());
                        }
                }
        }

        private String datumValue(Datum d) {
                return ("(" + d.getName() + "," + d.stringVal(true) + ")");
        }

        private String opName(int op) {
                return tokenImage[op].substring(1,tokenImage[op].length()-1);
        }

        private void unaryOp(int op, Object arg1) {
                Datum a = getParam(arg1);
                Datum ans = Datum.INVALID_DATUM;
                switch(op) {
                        case PLUS: ans = a; break;
                        case MINUS: ans = DatumMath.neg(a); break;
                        case NOT: ans = DatumMath.not(a); break;
                }
                stack.push(ans);
                if (isDebug) {
                        debug(opName(op) + "\t" + datumValue(a),ans);
                }
        }

        private Datum getParam(Object o) {
                if (o == null)
                        return Datum.INVALID_DATUM;
                return (Datum) o;
        }

        private void binaryOp(int op, Object arg2, Object arg1) {
                Datum a = getParam(arg1);
                Datum b = getParam(arg2);
                Datum ans = Datum.INVALID_DATUM;
                switch(op) {
                        case PLUS: ans = DatumMath.add(a,b); break;
                        case MINUS: ans = DatumMath.subtract(a,b); break;
                        case MULTIPLY: ans = DatumMath.multiply(a,b); break;
                        case DIVIDE: ans = DatumMath.divide(a,b); break;
                        case GT: ans = DatumMath.gt(a,b); break;
                        case GE: ans = DatumMath.ge(a,b); break;
                        case EQ: ans = DatumMath.eq(a,b); break;
                        case NEQ: ans = DatumMath.neq(a,b); break;
                        case LT: ans = DatumMath.lt(a,b); break;
                        case LE: ans = DatumMath.le(a,b); break;
                        case CONCATENATE: ans = DatumMath.concat(a,b); break;
                        case ANDAND: ans = DatumMath.andand(a,b); break;
                        case OROR: ans = DatumMath.oror(a,b); break;
                        case MODULUS: ans = DatumMath.modulus(a,b); break;
                        case XOR: ans = DatumMath.xor(a,b); break;
                        case AND: ans = DatumMath.and(a,b); break;
                        case OR: ans = DatumMath.or(a,b); break;
                        case ASSIGN: evidence.set(a.stringVal(),b); ans = evidence.getDatum(a.stringVal()); break;
                }
                stack.push(ans);
                if (isDebug) {
                        debug(opName(op) + "\t" + datumValue(a) + "\t" + datumValue(b),ans);
                }
        }

        private void trinaryOp(int op, Object arg3, Object arg2, Object arg1) {
                Datum a = getParam(arg1);
                Datum b = getParam(arg2);
                Datum c = getParam(arg3);
                Datum ans = Datum.INVALID_DATUM;
                switch(op) {
                        case QUEST: ans = DatumMath.conditional(a,b,c); break;
                }
                stack.push(ans);
                if (isDebug) {
                        debug(opName(op) + "\t" + datumValue(a) + "\t" + datumValue(b) + "\t" + datumValue(c),ans);
                }
        }

        private void functionOp(Token func, Stack params) {
                Datum ans = Datum.INVALID_DATUM;
                ans = evidence.function(func.image, params, func.beginLine, func.beginColumn);
                stack.push(ans);
                if (isDebug) {
                        StringBuffer sb = new StringBuffer("function\t" + func.image);
                        for (int i=0;i<params.size();++i) {
                                Object o = params.elementAt(i);
                                if (o == null)
                                        sb.append("\tnull");
                                else if (o instanceof Datum)
                                        sb.append("\t" + datumValue((Datum) o));
                                else if (o instanceof String)
                                        sb.append("\t" + (String) o);
                                else
                                        sb.append("\t" + o.getClass());
                        }
                        debug(sb.toString(), ans);
                }
        }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case PLUS:
    case MINUS:
    case NOT:
    case LP:
    case LSB:
    case LCB:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case NMTOKEN:
      Expressions();
      break;
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    case EOL:
      jj_consume_token(EOL);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Expressions() throws ParseException {
    Expression();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      Expression();
                                        Object value = stack.pop();
                                        stack.pop();    /* throw away the penultimate item on the stack */
                                        stack.push(value);
    }
  }

  final public void Expression() throws ParseException {
    if (jj_2_1(2)) {
      AssignmentExpression();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case PLUS:
      case MINUS:
      case NOT:
      case LP:
      case LSB:
      case LCB:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case NMTOKEN:
        ConditionalExpression();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void AssignmentExpression() throws ParseException {
                               Token t;
    jj_consume_token(NMTOKEN);
                    t = token;
    jj_consume_token(ASSIGN);
    ConditionalExpression();
                binaryOp(ASSIGN,stack.pop(), new Datum(t.image,Datum.STRING));
  }

  final public void ConditionalExpression() throws ParseException {
    LogicalORExpression();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUEST:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(QUEST);
      LogicalORExpression();
      jj_consume_token(COLON);
      LogicalORExpression();
                                  trinaryOp(QUEST,stack.pop(),stack.pop(),stack.pop());
    }
  }

  final public void LogicalORExpression() throws ParseException {
    LogicalANDExpression();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OROR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(OROR);
      LogicalANDExpression();
                                  binaryOp(OROR,stack.pop(),stack.pop());
    }
  }

  final public void LogicalANDExpression() throws ParseException {
    InclusiveORExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ANDAND:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      jj_consume_token(ANDAND);
      InclusiveORExpression();
                                  binaryOp(ANDAND,stack.pop(),stack.pop());
    }
  }

  final public void InclusiveORExpression() throws ParseException {
    ExclusiveORExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      jj_consume_token(OR);
      ExclusiveORExpression();
                                  binaryOp(OR,stack.pop(),stack.pop());
    }
  }

  final public void ExclusiveORExpression() throws ParseException {
    ANDExpression();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case XOR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      jj_consume_token(XOR);
      ANDExpression();
                                  binaryOp(XOR,stack.pop(),stack.pop());
    }
  }

  final public void ANDExpression() throws ParseException {
    EqualityExpression();
    label_7:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
      EqualityExpression();
                                  binaryOp(AND,stack.pop(),stack.pop());
    }
  }

  final public void EqualityExpression() throws ParseException {
                              Token op;
    RelationalExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
      case NEQ:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
        break;
      case NEQ:
        jj_consume_token(NEQ);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                           op = token;
      RelationalExpression();
                                  binaryOp(op.kind,stack.pop(),stack.pop());
    }
  }

  final public void RelationalExpression() throws ParseException {
                                Token op;
    AdditiveExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
      case GE:
      case LT:
      case LE:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        jj_consume_token(LT);
        break;
      case GT:
        jj_consume_token(GT);
        break;
      case LE:
        jj_consume_token(LE);
        break;
      case GE:
        jj_consume_token(GE);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                        op = token;
      AdditiveExpression();
                                  binaryOp(op.kind,stack.pop(),stack.pop());
    }
  }

  final public void AdditiveExpression() throws ParseException {
                              Token op;
    MultiplicativeExpression();
    label_10:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      case CONCATENATE:
        jj_consume_token(CONCATENATE);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                               op = token;
      MultiplicativeExpression();
                                  binaryOp(op.kind,stack.pop(),stack.pop());
    }
  }

  final public void MultiplicativeExpression() throws ParseException {
                                    Token op;
    UnaryExpression();
    label_11:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                    op = token;
      UnaryExpression();
                                  binaryOp(op.kind,stack.pop(),stack.pop());
    }
  }

  final public void UnaryExpression() throws ParseException {
                           Token op;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
    case NOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      case NOT:
        jj_consume_token(NOT);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                     op = token;
      PrimaryExpression();
                  unaryOp(op.kind,stack.pop());
      break;
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case LP:
    case LSB:
    case LCB:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case NMTOKEN:
      PrimaryExpression();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void PrimaryExpression() throws ParseException {
    if (jj_2_5(2)) {
      Function();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
        Constant();
        break;
      case NMTOKEN:
        jj_consume_token(NMTOKEN);
                        Datum d = evidence.getDatum(token.image);
                        if (d == null) {
                                error("undefined variable '" + token.image + "'", token.beginLine, token.beginColumn);
                                stack.push(Datum.INVALID_DATUM);
                        }
                        else {
                                stack.push(d);
                        }
        break;
      case LP:
        jj_consume_token(LP);
        Expressions();
        jj_consume_token(RP);
        break;
      case LCB:
        jj_consume_token(LCB);
        Expressions();
        jj_consume_token(RCB);
        break;
      case LSB:
        jj_consume_token(LSB);
        Expressions();
        jj_consume_token(RSB);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Constant() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      case FLOATING_POINT_LITERAL:
        jj_consume_token(FLOATING_POINT_LITERAL);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                  stack.push(new Datum(token.image,Datum.NUMBER));
      break;
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING_LITERAL:
        jj_consume_token(STRING_LITERAL);
        break;
      case CHARACTER_LITERAL:
        jj_consume_token(CHARACTER_LITERAL);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                        /* replace special characters before storing value */
                        StringBuffer sb = new StringBuffer();
                        char c;
                        int i=0;

                        try {
                                for (i=1;i<token.image.length()-1;++i) {
                                        c = token.image.charAt(i);
                                        if (c == '\\') {
                                                c = token.image.charAt(++i);
                                                switch (c) {
                                                        case 'b': sb.append('\b'); break;
                                                        case 'f': sb.append('\f'); break;
                                                        case 'n': sb.append('\n'); break;
                                                        case 'r': sb.append('\n'); break;
                                                        case 't': sb.append('\t'); break;
                                                        case '\'': sb.append('\''); break;
                                                        case '\"': sb.append('\"'); break;
                                                        case '\\': sb.append('\\'); break;
                                                        default: sb.append(c); break;
                                                }
                                        }
                                        else {
                                                sb.append(c);
                                        }
                                }
                        }
                        catch (IndexOutOfBoundsException e) {
                                error("unterminated escaped character", token.beginLine, token.beginColumn + i);
                        }

                        stack.push(new Datum(sb.toString(),Datum.STRING));
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Function() throws ParseException {
                    Token t; Stack params;
    jj_consume_token(NMTOKEN);
                    t = token;
    jj_consume_token(LP);
    params = FunctionParameters();
    jj_consume_token(RP);
                        functionOp(t,params);
  }
